# nclassifier

./: README.md  pyproject.toml  requirements.txt
src/nclassifier/: SHEPARD.npz  __init__.py  nclassifier_module.py
